--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,9 +2,7 @@
   font-family: "Recursive", serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-variation-settings:
-    "slnt" 0,
-    "CASL" 0,
-    "CRSV" 0.5,
-    "MONO" 0;
+  font-variation-settings: "slnt" 0, "CASL" 0, "CRSV" 0.5, "MONO" 0;
+  margin: 0;
+  padding: o;
 }
