--- a/frontend/src/screens/components/Navigation.module.scss
+++ b/frontend/src/screens/components/Navigation.module.scss
@@ -53,3 +53,19 @@
     }
   }
 }
+
+@keyframes scaleCart {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.nav-cart.animate {
+  animation: scaleCart 0.5s ease-in-out;
+}
